--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -1,35 +1,19 @@
-name: rust
-
 on: [push, pull_request]
 
-jobs:
-  build:
-    name: Rust ${{ matrix.rust-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macOS-latest]
-        rust-version: [beta, nightly]
-        include:
-        - rust-version: beta
-          continue-on-error: true
+name: Rust
 
+jobs:
+  check:
+    name: Check
+    runs-on: ubuntu-latest
     steps:
-    - uses: hecrj/setup-rust-action@master
-      with:
-        rust-version: ${{ matrix.rust-version }}
-    - uses: actions/checkout@v1
-    - name: Check formatting
-      if: matrix.rust-version != 'nightly'
-      run: |
-        rustup component add rustfmt
-        cargo fmt --all -- --check
-      working-directory: solang-server
-    - name: Build
-      continue-on-error: ${{ matrix.continue-on-error }}
-      run: cargo build --all --verbose
-      working-directory: solang-server
-    - name: Run tests
-      continue-on-error: ${{ matrix.continue-on-error }}
-      run: cargo test --all --verbose
-      working-directory: solang-server
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          override: true
+      - run: cargo build
+        working-directory: solang-server
+      - run: cargo fmt --all
+        working-directory: solang-server
