--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -1,10 +1,11 @@
+
 on: [push, pull_request]
 
 name: Rust
 
 jobs:
-  check:
-    name: Check
+  build:
+    name: Build and format
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
