--- a/.github/workflows/rust.yaml
+++ b/.github/workflows/rust.yaml
@@ -6,7 +6,10 @@ name: Rust
 jobs:
   build:
     name: Build and format
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macOS-latest]
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
