--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,9 +16,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: Npm install
-      run: npm install
-    - name: Run tests
+    - run: npm install
     - run: xvfb-run -a npm test
       if: runner.os == 'Linux'
     - run: npm test
